[metadata]
name = saltext.yte
description = Salt Extension for interacting with Yte
long_description = file: README.md
long_description_content_type = text/markdown
author = Tyler Levy Conde
author_email = tyler.levy-conde@broadcom.com
keywords = salt-extension
url = https://github.com/salt-extensions/saltext-yte
project_urls =
    Source=https://github.com/salt-extensions/saltext-yte
    Tracker=https://github.com/salt-extensions/saltext-yte/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.5
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements
install_requires =
  salt>=3006
  yte

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
salt.loader=
  saltext.yte = saltext.yte

[requirements-files]
install_requires = requirements/base.txt

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[sdist]
owner = root
group = root
